# poly_events

./: .gitignore  README.md  pyproject.toml
.github/workflows/: refresh_poly_events.yaml  sync_poly_events.yaml  sync_poly_new_events.yaml
src/poly/: __init__.py  common.py  enrich_polymarket_events.py  list_polymarket_categories.py  refresh_polymarket_events.py  sync_polymarket_events.py
